[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Inputs/Get_Auth.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Dialogs/Auth_Popup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Scripts/Boot_Screen.gd" type="Script" id=3]
[ext_resource path="res://Assets/CROWNT.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_char = 2
font_data = ExtResource( 4 )

[node name="Boot_Screen" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -200.0
margin_right = 350.0
margin_bottom = 200.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 50
script = ExtResource( 3 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 52.0
margin_right = 685.0
margin_bottom = 312.0
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox"]
margin_right = 670.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Arrow 
Overlay"
align = 1

[node name="Label2" type="Label" parent="VBox"]
margin_top = 147.0
margin_right = 670.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "By EroAxee"
align = 1

[node name="Auth_Tweaks" type="HBoxContainer" parent="VBox"]
margin_top = 192.0
margin_right = 670.0
margin_bottom = 216.0
size_flags_horizontal = 3

[node name="Token_Input" type="LineEdit" parent="VBox/Auth_Tweaks"]
unique_name_in_owner = true
margin_right = 333.0
margin_bottom = 24.0
hint_tooltip = "A manual input for your token in case automatic authentication doesn't work."
size_flags_horizontal = 3
align = 1
secret = true
placeholder_text = "Manual Token Input"

[node name="Port_Input" type="LineEdit" parent="VBox/Auth_Tweaks"]
unique_name_in_owner = true
margin_left = 337.0
margin_right = 670.0
margin_bottom = 24.0
hint_tooltip = "Port for authentication to be received over.  Defaults to 80 for Windows.  1338 is a good option for Linux and MacOS is currently untested."
size_flags_horizontal = 3
align = 1
placeholder_text = "Authentication Port Input"

[node name="Get_Auth" parent="VBox" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 220.0
margin_right = 670.0
margin_bottom = 260.0

[node name="Start_Overlay" type="Button" parent="VBox"]
visible = false
margin_top = 264.0
margin_right = 670.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 45 )
size_flags_vertical = 3
text = "Start_Overlay"

[node name="Control" type="Control" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 685.0
margin_bottom = 350.0

[node name="Auth_Popup" parent="Control" instance=ExtResource( 2 )]
pause_mode = 2
unique_name_in_owner = true
margin_left = 185.0
margin_top = 215.0
margin_right = 485.0
margin_bottom = 345.0

[connection signal="got_token" from="VBox/Get_Auth" to="Control/Auth_Popup" method="check_token"]
[connection signal="pressed" from="VBox/Start_Overlay" to="Control/Auth_Popup" method="check_token"]
[connection signal="token_valid" from="Control/Auth_Popup" to="." method="start_overlay"]
